force-app/main/default/objects/leaseworks__Base_Readings__c/leaseworks__Base_Readings__c.object-meta.xml
<CustomObject>
    <description>Delivery Details are the details of various components of an asset at the time signing the contract. Base Readings related to various events associated to each assemby of the asset can be stored here.
[MODULE: Contract]
[LOAD: Optional]
[PREREQUISITES: Lease]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Delivery Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>