force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__CSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN__c</fullName>
    <description>CSN at the time of entering the lease</description>
    <inlineHelpText>Cycles Since New at the time of entering the lease</inlineHelpText>
    <label>CSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>