force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__Flight_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Flight_Hours__c</fullName>
    <label>Z_Unused Flight Hours</label>
    <length>18</length>
    <type>Text</type>
</CustomField>