force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__Last_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Event_Date__c</fullName>
    <label>Last Event Date</label>
    <type>Date</type>
</CustomField>