force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__Months_Since_Last_Shop_Visit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Months_Since_Last_Shop_Visit__c</fullName>
    <label>Months Since Last Shop Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>