force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__Reading_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reading_Type__c</fullName>
    <label>Reading Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actuals</fullName>
                <default>true</default>
                <label>Actuals</label>
            </value>
            <value>
                <fullName>Estimated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>