force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__Status_As_On__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status_As_On__c</fullName>
    <label>Date of readings</label>
    <type>Date</type>
</CustomField>