force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <formula>TEXT( leaseworks__Component__r.leaseworks__Type__c )</formula>
    <label>Z_Unused Type</label>
    <type>Text</type>
</CustomField>