force-app/main/default/objects/leaseworks__Base_Readings__c/fields/leaseworks__Type_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type_New__c</fullName>
    <label>Assembly Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airframe</fullName>
            </value>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>Engine 1</fullName>
            </value>
            <value>
                <fullName>Engine 2</fullName>
            </value>
            <value>
                <fullName>Engine 3</fullName>
            </value>
            <value>
                <fullName>Engine 4</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Left Main</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Right Main</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Nose</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Left Wing</fullName>
            </value>
            <value>
                <fullName>Landing Gear - Right Wing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Propeller 1</fullName>
            </value>
            <value>
                <fullName>Propeller 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>